<resources>
    <string name="app_name">Bobi</string>

    <string name="welcome_default">World</string>
    <string name="welcome">Hello %s 👋</string>

    <string name="open_camera">Open camera</string>
    <string name="open_details">Open details</string>

    <string name="time_remaining">Remaining %d seconds</string>
    <string name="time_done">Finished!</string>


    <!-- Content Description -->
    <string name="description_image">Image of a dog</string>

    <string name="show_alert_dialog">Show alert dialog</string>
    <string name="show_snackbar">Show Snackbar</string>
    <string name="dialog_title">Dialog title</string>
    <string name="dialog_message">Dialog message</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_on_ok">Confirmed</string>
    <string name="dialog_on_cancel">Canceled</string>
    <string name="snackbar_message">Snackbar message</string>
    <string name="snackbar_thanks">Thanks</string>
    <string name="snackbar_thanks_clicked">Snackbar button clicked</string>

    <string name="hint_username">Your username goes here</string>
    <string name="hint_password">Your password goes here</string>
    <string name="action_authenticate">Authenticate</string>
    <string name="save_credentials">Save credentials</string>
    <string name="error_invalid_credentials">Invalid credentials</string>
    <string name="description_logo">Description logo</string>
    <string name="error_credentials_empty_username">Missing username</string>
    <string name="error_credentials_empty_password">Missing password</string>
    <string name="start_timer">Start timer</string>
    <string name="open_list">Open List</string>

    <string name="main_menu_home">Home</string>
    <string name="main_menu_breeds">Breeds</string>
    <string name="main_menu_favourites">Favourites</string>
    <string name="main_menu_about">About</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_copyright" translatable="false">Copyright 2020</string>
    <string name="about_email" translatable="false">E-mail</string>
    <string name="about_website" translatable="false">Website</string>
    <string name="about_youtube" translatable="false">Youtube</string>
    <string name="about_share">Share</string>
    <string name="about_authors">Authors</string>
    <string name="twitter" translatable="false">Twiter</string>
    <string name="about_libraries">Libraries</string>
    <string name="about_android" translatable="false">Android</string>
    <string name="about_retrofit" translatable="false">Retrofit</string>
    <string name="about_glide" translatable="false">Glide</string>
    <string name="about_icons8" translatable="false">icons8</string>
    <string name="settings">Settings</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="write_something_here">Write something here</string>
    <string name="crash_app" translatable="false">Crash app</string>
    <string name="open_custom_camera">Open custom camera</string>

</resources>